<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Presentation.AddReport">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:textSize="16sp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/crimeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/criminal_activity"
                        android:textSize="12sp"
                        android:textColor="#D6DDDC"
                        android:background="@drawable/black_button"
                        android:onClick="crimeReport" />


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/suspiciousButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="suspiciousReport"
                    android:text="@string/suspicious_activity"
                    android:textSize="12sp"
                    android:textColor="#D6DDDC"
                    android:background="@drawable/gray_button" />


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/enviroButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="environmentReport"
                    android:textSize="12sp"
                    android:text="@string/environment"
                    android:textColor="#D6DDDC"
                    android:background="@drawable/green_button" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/infraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/orange_button"
                    android:onClick="infrastructureReport"
                    android:text="@string/infrastructure"
                    android:textColor="#D6DDDC"
                    android:textSize="11sp" />


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/mobilityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="mobilityReport"
                    android:text="@string/mobility"
                    android:textSize="12sp"
                    android:textColor="#C7D3D1"
                    android:background="@drawable/blue_button" />

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_picture"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_image_library"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:textSize="12dp"
            android:text="@string/gallery" />

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:src="@drawable/image" />

        <Button
            android:id="@+id/button_image_camera"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:textSize="12dp"
            android:text="@string/camera" />

    </LinearLayout>

    <TextView
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_incident"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#83A4B3">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:popupBackground="#E6F2F2F3" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected"/>
        <TextView
            android:id="@+id/selection_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provide_description"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="start|top"
            android:hint="@string/description_example"
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:textStyle="italic" />

    </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="15dp"
            android:onClick="submit"
            android:text="@string/submit" />
    </LinearLayout>
    </ScrollView>

</LinearLayout>