<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/login_2"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_student_id"
            android:hint="@string/student_Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_textColorHint="@color/colorBlack"
            app:met_textColor="@color/colorBlack"
            app:met_primaryColor="@color/colorBlack"
            app:met_iconPadding="0dp"
            android:drawableRight="@drawable/ic_user"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_create_account"
        android:text="@string/create_account"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>